[package]
name = "nlp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
polars = "0.36.2"
rand = "0.8.5"
rayon = "1.8.1"
regex = "1.10.3"
stopwords = "0.1.1"
